# IA_Trabajos

./: README.md
N_en_raya/: .gitignore  CMakeLists.txt  build.sh
N_en_raya/src/: MinMaxTree.cpp
